# separation

./: README.md  pyproject.toml
src/separation/: __init__.py  bags.py  vertex_separation.py
