[project]
name = "separation"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-sat (>=1.8.dev16,<2.0)",
    "network (>=0.1,<0.2)"
]

[tool.poetry]
packages = [{include = "separation", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
